# clave-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clave  dist-workspace.toml  duel  spec-clave  spec-duel
assets/: serve.html
scripts/: render_check.py
src/: app.rs  auth.rs  input.rs  main.rs  model.rs  prelude.rs  render.rs  runtime.rs  storage.rs  ui.rs  worker.rs
src/app/: ask.rs  chats.rs  commands.rs  config.rs  editor.rs  effort.rs  events.rs  external.rs  footer.rs  mod.rs  onboarding.rs  plan.rs  runs.rs  search.rs  settings.rs  tandem.rs
src/model/: ask.rs  chat_mode.rs  commands.rs  constants.rs  editors.rs  effort.rs  language.rs  mod.rs  mode.rs  overlay.rs  provider.rs  run_access.rs  shortcuts.rs  theme.rs  usage.rs
src/server/: mod.rs
src/ui/: ask.rs  chats.rs  command_palette.rs  effort.rs  footer.rs  helpers.rs  layout.rs  loader.rs  mod.rs  onboarding.rs  plan_gate.rs  prompt.rs  search.rs  settings.rs  shortcuts.rs  transcript.rs  welcome.rs
