[package]
name = "clave"
version = "0.1.1"
edition = "2021"
description = "Локальный TUI-оркестратор: связывает CLI claude и codex как агентов в один цикл планирования."
license = "MIT"
repository = "https://github.com/grabrick/clave-cli"
readme = "README.md"
keywords = ["tui", "ai", "claude", "codex", "agents"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
serde_json = "1"
tiny_http = "0.12"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
